--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -59,8 +59,8 @@
 
             <LinearLayout
                 android:id="@+id/fila02"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_below="@+id/fila01"
                 android:gravity="center"
                 android:orientation="horizontal"
