--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -44,7 +44,7 @@
                     android:textSize="25dp" />
 
                 <TextView
-                    android:id="@+id/descripcion"
+                    android:id="@+id/tvDescripcion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvSaludo"
@@ -112,7 +112,8 @@
                     android:id="@+id/seccionAdministradores"
                     android:layout_width="128dp"
                     android:layout_height="128dp"
-                    app:cardUseCompatPadding="true">
+                    app:cardUseCompatPadding="true"
+                    android:onClick="seleccionSeccion">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -142,7 +143,8 @@
                     android:layout_width="128dp"
                     android:layout_height="128dp"
                     android:padding="10dp"
-                    app:cardUseCompatPadding="true">
+                    app:cardUseCompatPadding="true"
+                    android:onClick="seleccionSeccion">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -185,7 +187,8 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:padding="10dp"
-                    app:cardUseCompatPadding="true">
+                    app:cardUseCompatPadding="true"
+                    android:onClick="seleccionSeccion">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -215,7 +218,8 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:padding="10dp"
-                    app:cardUseCompatPadding="true">
+                    app:cardUseCompatPadding="true"
+                    android:onClick="seleccionSeccion">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -256,7 +260,8 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:padding="10dp"
-                    app:cardUseCompatPadding="true">
+                    app:cardUseCompatPadding="true"
+                    android:onClick="seleccionSeccion">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -286,7 +291,8 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:padding="10dp"
-                    app:cardUseCompatPadding="true">
+                    app:cardUseCompatPadding="true"
+                    android:onClick="seleccionSeccion">
 
                     <ImageView
                         android:layout_width="match_parent"
