--- a/app/src/main/res/layout/activity_registrar_cancha.xml
+++ b/app/src/main/res/layout/activity_registrar_cancha.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="@color/colorPrimaryLing"
-    tools:context="com.vel.dar.her.tododeportes.RegistrarCanchaActivity">
+    tools:context="com.tododeportes.tododeportesapp.gui.RegistrarCanchaActivity">
 
     <ImageView
         android:layout_width="match_parent"
