--- a/app/src/main/res/menu/menu_registrar_cancha.xml
+++ b/app/src/main/res/menu/menu_registrar_cancha.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.vel.dar.her.tododeportes.RegistrarCanchaActivity">
+    tools:context="com.tododeportes.tododeportesapp.gui.RegistrarCanchaActivity">
     <item android:id="@+id/action_settings" android:title="@string/saveCancha"
         android:orderInCategory="100" app:showAsAction="always" android:icon="@drawable/save_icon"/>
 </menu>
